--- a/Client/index.html
+++ b/Client/index.html
@@ -10,9 +10,9 @@
     <body>
         <h1>Client </h1>
         <form id="myform">
-            <input type="text" name="day"/>
-            <input type="text" name="month"/>
-            <input type="text" name="year"/>
+            <input type="text" name="date"/>
+            <!-- <input type="text" name="month"/> -->
+            <!-- <input type="text" name="year"/> -->
 
             <button id="send-button" > Send Form</button>
         </form>
