--- a/Client/index.html
+++ b/Client/index.html
@@ -9,11 +9,10 @@
     </head>
     <body>
         <h1>Client </h1>
+        <h4>Gebe das Datum ein. </h4>
         <form id="myform">
-            <input type="text" name="date"/>
-            <!-- <input type="text" name="month"/> -->
-            <!-- <input type="text" name="year"/> -->
-
+            <input type="date" name="date"/>
+            
             <button id="send-button" > Send Form</button>
         </form>
     </body>
