--- a/Aufgabe 5/event.html
+++ b/Aufgabe 5/event.html
@@ -86,7 +86,7 @@
                <button id="load-button" >Load from Local Storage </button>
                
                <button id="macheEtwas">Input Eintragen </button>
-               <button id="löscheEtwas">Input Löschen </button>
+               <!-- <button id="löscheEtwas">Input Löschen </button> -->
 
                
                <div id="display"></div>
